Add `item_model`, `completed_item_model`, and `custom_options` to default missions, improve config documentation and examples, make minor code improvements like using copyOf